# edami-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  cluster.cpp  create-gnuplot.py  create_random_set.sh  load.cpp  matrix-types.cpp  matrix-types.hpp  projdesc.txt  readline.hpp  types.hpp
